--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -9,11 +9,11 @@
             with our <span>Proficient team</span>
           </p>
 
-          <button class="btn btn-cta">Get in Touch <span><i class="fas fa-arrow-circle-right ml-2"></i></span></button>
+          <button class="btn btn-cta" [routerLink]="['/contact-us']">Get in Touch <span><i class="fas fa-arrow-circle-right ml-2"></i></span></button>
 
         </div>
         <div class="col-md-6">
-          <img class="cta-image" src="assets/images/services.svg" alt="logo">
+          <!-- <img class="cta-image" src="assets/images/services.svg" alt="logo"> -->
 
         </div>
       </div>
