--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg fixed-top">
-  <img class="navbar-brand" [routerLink]="['/home']" src="assets/images/logo-031.svg" alt="logo">
+  <img class="navbar-brand" [routerLink]="['/']" src="assets/images/logo-02.svg" alt="logo">
   <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button> -->
@@ -7,13 +7,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" [routerLink]="['/home']" routerLinkActive="active-link">Home</a>
+        <a class="nav-link" [routerLink]="['/']" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/services']" routerLinkActive="active-link">Services</a>
+        <a class="nav-link" [routerLink]="['/services']" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Services</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/contact-us']" routerLinkActive="active-link">Contact Us</a>
+        <a class="nav-link" [routerLink]="['/contact-us']" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Contact Us</a>
       </li>
       <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
