--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -13,7 +13,7 @@
 
         </div>
         <div class="col-md-6">
-          <img class="cta-image" src="assets/images/contact.svg" alt="logo">
+          <!-- <img class="cta-image" src="assets/images/contact.svg" alt="logo"> -->
 
         </div>
       </div>
