--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,10 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import 'assets/css/font-montserrat.css';
 @import 'assets/css/font-roboto.css';
-@import '../node_modules/@fortawesome/fontawesome-free/css/fontawesome.css';
-@import '../node_modules/@fortawesome/fontawesome-free/css/solid.css';
-@import '../node_modules/@fortawesome/fontawesome-free/css/brands.css';
-@import '../node_modules/@fortawesome/fontawesome-free/css/all.css'; // blue - #1472C8
+@import '../node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css';
+@import '../node_modules/@fortawesome/fontawesome-free/css/solid.min.css';
+@import '../node_modules/@fortawesome/fontawesome-free/css/brands.min.css';
+@import '../node_modules/@fortawesome/fontawesome-free/css/all.min.css'; // blue - #1472C8
 
 body {
   scroll-behavior: smooth;
