refined content on services page

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col-md-6">
           <h1>Our Services </h1>
-          <p>Get an amazing consultancy experience <br>
+          <p>Get an amazing communications' consultancy experience <br>
             with our <span>Proficient team</span>
           </p>
 
@@ -40,44 +40,14 @@
         <div class="col-md-3">
           <div class="card">
             <h4>Key messages development</h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
-            </p>
+            <p>Get advice on key messaging that brings your brand to life through words that can be delivered consistently by everyone, anytime, anyplace.</p>
           </div>
         </div>
 
         <div class="col-md-3">
           <div class="card">
             <h4>Project management</h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
-            </p>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="card">
-            <h4>Copywriting services</h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
-            </p>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="card">
-            <h4>Development of Media materials</h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
-            </p>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="card">
-            <h4>Content strategy development</h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
+            <p>Good management help to keep and grow your customers, tapping into new opportunities and wide social media reach.
             </p>
           </div>
         </div>
@@ -85,144 +55,66 @@
 
         <div class="col-md-3">
           <div class="card">
-            <h4>Digital marketing communication</h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
-            </p>
+            <h4>Value propositions and narrate </h4>
+            <p>We assure innovation & creativity from highly skilled consultants and affordability</p>
           </div>
         </div>
 
 
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Channels through and narrate</h4>
+            <p>Harnes the power of social media & digital media, build a website as an online brochure</p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Human resources</h4>
+            <p>Recruitment requirements and avail labour laws</p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Events / Business processes</h4>
+            <p>Clear brief on output required , Brand recognition , work with franchises for prosperity</p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Customer Service</h4>
+            <p>Understand clients' industry segment and train staff on customer recognition</p>
+          </div>
+        </div>
 
       </div>
 
     </div>
   </div>
+
 
   <div class="content" id="product2">
     <div class="container">
 
-      <h3 class="section-heading">Media Production and Motion Graphics</h3>
+      <h3 class="section-heading">Brand strategy</h3>
 
       <div class="row">
 
         <div class="col-md-3">
           <div class="card">
-            <h4>Concept development</h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
-            </p>
+            <p>Branding and visual identity are all around us, we will guide you into building a strong visual identity that will set you apart and help you make more thoughtful design decisions in your business.</p>
           </div>
         </div>
-
-        <div class="col-md-3">
-          <div class="card">
-            <h4>Storyboarding</h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
-            </p>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="card">
-            <h4>Filming <span>(In-studio and On-location)</span></h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
-            </p>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="card">
-            <h4>Editing</h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
-            </p>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="card">
-            <h4>Animation / Motion graphics</h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
-            </p>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="card">
-            <h4>Photography</h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
-            </p>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="card">
-            <h4>Scriptwriting</h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
-            </p>
-          </div>
-        </div>
-
       </div>
 
     </div>
   </div>
+
+
 
   <div class="content" id="product3">
-    <div class="container">
-
-      <h3 class="section-heading">Graphic Design and Branding</h3>
-
-      <div class="row">
-
-        <div class="col-md-3">
-          <div class="card">
-            <h4>Logo and Branding materials</h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
-            </p>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="card">
-            <h4>Infographics and icons</h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
-            </p>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="card">
-            <h4>Documents and Annual reports</h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
-            </p>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="card">
-            <h4>Animations</h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
-            </p>
-          </div>
-        </div>
-
-      </div>
-
-    </div>
-  </div>
-
-  <div class="content" id="product4">
     <div class="container">
 
       <h3 class="section-heading">Language translations</h3>
@@ -231,10 +123,7 @@
 
         <div class="col-md-3">
           <div class="card">
-            <h4>Logo and Branding materials</h4>
-            <p>Get advice on strategic communications and marketing solutions
-              tailored to your requirements to boost your project from communication planning to media materials.
-            </p>
+            <p>We offer fluent French and English languages.</p>
           </div>
         </div>
       </div>
