--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,9 +8,11 @@
           <div class="row">
             <div class="col-md-7">
               <div class="content">
-                <h1>Creatively transforming <br>
-                  businesses to <span>Compete</span> <br>
-                  for tomorrow
+                <h1>
+                  Creatively cutting through <br>
+                  the <span>noise</span> to get <br>
+                  your message across
+
                 </h1>
 
                 <p>Experience a consultancy that prepares your business for <br>
@@ -33,12 +35,9 @@
               <div class="content">
 
                 <h1>Building ideas into <br class="d-none d-sm-block d-md-block">
-                   <span>strong</span> and <span>impactful</span> visualizations </h1>
+                  <span>strong</span> and <span>impactful</span> visualizations
+                </h1>
 
-                <p>Experience a consultancy that prepares your business for <br>
-                  <span>Uncommon growth</span> even in the face of disruption by solving <br> problems through
-                  better communications.
-                </p>
                 <button class="btn btn-cta" [routerLink]="['/contact-us']">Get in Touch <span><i class="fas fa-arrow-circle-right ml-2"></i></span></button>
               </div>
             </div>
@@ -53,13 +52,9 @@
           <div class="row">
             <div class="col-md-7">
               <div class="content">
-                <h1>Let the World <span>hear</span> your words and thoughts
+                <h1>Realising the <span>exposure</span> that your brand deserves
                 </h1>
 
-                <p>Experience a consultancy that prepares your business for <br>
-                  <span>Uncommon growth</span> even in the face of disruption by solving <br> problems through
-                  better communications.
-                </p>
                 <button class="btn btn-cta" [routerLink]="['/contact-us']">Get in Touch <span><i class="fas fa-arrow-circle-right ml-2"></i></span></button>
               </div>
             </div>
@@ -86,18 +81,9 @@
 
 
       <div class="row">
-        <!-- <div class="col-md-3"> -->
-        <!-- <img class="cta-image" src="assets/images/shell.svg" alt="logo"> -->
-        <!-- </div> -->
-        <!-- <div class="col-md-3"> -->
+
         <img class="cta-image" src="assets/images/total.png" alt="logo">
-        <!-- </div> -->
-        <!-- <div class="col-md-3"> -->
-        <img class="cta-image" src="assets/images/coca-cola-logo.png" alt="logo">
-        <!-- </div> -->
-        <!-- <div class="col-md-3"> -->
-        <!-- <img class="cta-image py-2" src="assets/images/equity-bank-logo.png" alt="logo"> -->
-        <!-- </div> -->
+
       </div>
     </div>
   </div>
@@ -108,7 +94,7 @@
       <h2><span>What we do here</span></h2>
 
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="card">
             <h4>Communications consultancy</h4>
             <p>Get advice on strategic communications and marketing solutions
@@ -126,31 +112,12 @@
             </ul> -->
           </div>
         </div>
-        <div class="col-md-3">
+
+        <div class="col-md-4">
           <div class="card">
-            <h4>Media production and Motion graphics</h4>
-            <p>Understanding the creative process in film making from concept development
-              to storyboarding can be mentally-draining, we will help you build an idea to a strong visualization.</p>
-
-            <button class="btn btn-view" [routerLink]="['/services']" [queryParams]="{ service: '02' }">learn more <span><i class="fas fa-arrow-circle-right ml-2"></i></span></button>
-
-            <!-- <ul>
-              <li>Concept Development</li>
-              <li>Storyboarding and Scriptwriting </li>
-              <li>Filming (In-studio and On-location)</li>
-              <li>Photography</li>
-              <li>Editing</li>
-              <li>Animation / Motion Graphics</li>
-            </ul> -->
-          </div>
-
-        </div>
-
-        <div class="col-md-3">
-          <div class="card">
-            <h4>Graphic design and Branding</h4>
+            <h4>Brand strategy</h4>
             <p>Branding and visual identity are all around us,
-              we will guiding you to build a visual identity that can help you make more thoughtful design decisions in your business.</p>
+              we will guide you into building a strong visual identity that will set you apart and help you make more thoughtful design decisions in your business.</p>
 
             <button class="btn btn-view" [routerLink]="['/services']" [queryParams]="{ service: '03' }">learn more <span><i class="fas fa-arrow-circle-right ml-2"></i></span></button>
 
@@ -162,7 +129,7 @@
             </ul> -->
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="card">
             <h4>Language translations</h4>
             <p>We offer proffessional translators that are richly invested in a vast array of linguistics, to make it easier to interpret and render texts / speech accurately and quickly and spot errors</p>
