--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -77,6 +77,7 @@
       margin-bottom: 20px;
       box-shadow: 7px 7px 0 0 rgba(0,0,0,0.09);
       background-color: #FCFCFC;
+      min-height: 315px;
 
       &:hover {
         .btn-view span {
