--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -12,21 +12,22 @@
 
         <div class="row">
           <div class="col-md-8">
-            <h5>Follow us on social media</h5>
-            <div class="wrap mb-4">
+            <div hidden>
+              <h5>Follow us on social media</h5>
+              <div class="wrap mb-4">
 
-              <span title="facebook"><i class="fab fa-facebook-f"></i></span>
-              <span title="instagram"><i class="fab fa-instagram"></i></span>
-              <span title="whatsapp"><i class="fab fa-whatsapp pl-1"></i></span>
+                <span title="facebook"><i class="fab fa-facebook-f"></i></span>
+                <span title="instagram"><i class="fab fa-instagram"></i></span>
+                <span title="whatsapp"><i class="fab fa-whatsapp pl-1"></i></span>
 
+              </div>
             </div>
 
             <h5>Services</h5>
             <ul>
               <li [routerLink]="['/services']" [queryParams]="{ service: '01' }">Communications consultancy</li>
-              <li [routerLink]="['/services']" [queryParams]="{ service: '02' }">Media production and Motion graphics</li>
-              <li [routerLink]="['/services']" [queryParams]="{ service: '03' }">Graphic design and Branding</li>
-              <li [routerLink]="['/services']" [queryParams]="{ service: '04' }">Language translations</li>
+              <li [routerLink]="['/services']" [queryParams]="{ service: '02' }">Brand strategy</li>
+              <li [routerLink]="['/services']" [queryParams]="{ service: '03' }">Language translations</li>
             </ul>
 
 
@@ -39,13 +40,6 @@
               <span><i class="fas fa-phone-alt mr-1"></i></span>
               <span style="color: #f1f1f1;cursor:pointer" class="border-bottom pb-1">(254)700 000 000</span>
             </div>
-
-            <h5>Resources</h5>
-            <ul>
-              <li>Terms & Conditions</li>
-              <li>Blog</li>
-              <li>Help</li>
-            </ul>
 
 
 
