--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #62A851;
+  background-color: #fff;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.09);
   padding-right: 100px;
   height: 75px;
@@ -22,7 +22,7 @@
     border-radius: 3px;
     font-size: 1rem;
     padding-bottom: 3px;
-    border-bottom: 3px solid #62A851;
+    border-bottom: 3px solid #00a651;
 
 
     &:hover {
