--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -30,12 +30,12 @@
       margin-bottom: 20px;
 
       span {
-        // color: #62A851;
+        // color: #00a651;
       }
     }
 
     .btn-cta {
-      background-color: #62A851;
+      background-color: #00a651;
       color: #fff;
       letter-spacing: 1px;
       font-weight: 600;
@@ -55,12 +55,12 @@
       height: 400px;
       margin-top: 0!important;
       margin-top: 150px;
-      filter: drop-shadow(0px 3px 40px #62A85144);
+      filter: drop-shadow(0px 3px 40px #00a65144);
     }
   }
 
   .content {
-    background-color: #62A851;
+    background-color: #00a651;
     padding-top: 20px;
 
     h3 {
@@ -129,7 +129,7 @@
   }
 
   .content {
-    background-color: #62A851;
+    background-color: #00a651;
     padding: 40px 10px!important !important;
   }
 }
